--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:esp12e]
+[env:esp07]
 platform = espressif8266
-board = esp12e
+board = esp07
 framework = arduino
