--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/en/stable/projectconf.html
 
-[env:esp07]
+[env:nodemcuv2]
 platform = espressif8266
-board = esp07
+board = nodemcuv2
 framework = arduino
